--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,86 @@ __pycache__/
 /OSW/TestData/Output/
 /OSW/TestData/RaviTestFiles/
 OSW/TestData/Generated/
+
+
+# GIS files
+
+**/*.dbf
+**/*.prj
+**/*.qpj
+**/*.shx
+**/*.pgw
+
+
+# Google docs
+
+**/*.gsheet
+**/*.gdoc
+**/*.gslides
+
+# Icon file
+
+**/*Icon*
+
+# Compiled source #
+###################
+**/*.com
+**/*.class
+**/*.dll
+**/*.exe
+**/*.o
+**/*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+**/*.7z
+**/*.dmg
+**/*.gz
+**/*.iso
+**/*.jar
+**/*.rar
+**/*.tar
+**/*.zip
+**/*.json
+
+# Logs and databases #
+######################
+**/*.log
+**/*.sql
+**/*.sqlite
+
+# OS generated files #
+######################
+**/.DS_Store
+**/.DS_Store?
+**/._*
+**/.Spotlight-V100
+**/.Trashes
+**/ehthumbs.db
+**/Thumbs.db
+**/.ipynb_checkpoints*
+
+# Salesforce / SFDX / CCI
+**/.cci
+**/.sfdx
+/src.orig
+/src
+
+# Python
+**/*.pyc
+*.pyc
+**/__pycache__
+
+# Editors
+**/*.sublime-project
+**/*.sublime-workspace
+**/.vscode
+**/.idea
+**/.project
+**/.settings
+
+# Misc
+**/.DS_Store
+**/node_modules
